feat: make test use normal thread